JVMTI RawMonitorWait triggers assertion failure: Only JavaThreads can be interruptible

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 14
    • Affects Version/s: 14
    • Component/s: hotspot
    • b15

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/jvmtiRawMonitor.cpp:377
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/prims/jvmtiRawMonitor.cpp:377), pid=31520, tid=31753
      # assert(__the_thread__->is_Java_thread()) failed: Only JavaThreads can be interruptible
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+15) (fastdebug build 14-ea+15-611)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+15-611, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1129f54] JvmtiRawMonitor::raw_wait(long, bool, Thread*)+0x334

      This is triggered by the changes in JDK-8230424, but we need to see how an interruptible wait arises here.

            Assignee:
            David Holmes
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: