8231162: JVMTI RawMonitorWait triggers assertion failure: Only JavaThreads can be interruptible

Reviewed-by: dcubed